src-org/main/default/objects/Flight__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <label>Airline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>