src-org/main/default/objects/Flight__c/fields/Available_Economy_Seats__c.field-meta.xml
<CustomField>
    <fullName>Available_Economy_Seats__c</fullName>
    <label>Available Economy Seats</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>