src-org/main/default/objects/Flight__c/fields/Business_Price__c.field-meta.xml
<CustomField>
    <fullName>Business_Price__c</fullName>
    <label>Business Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>