src-org/main/default/objects/Flight__c/fields/CheckIn_Window_End__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Window_End__c</fullName>
    <formula>Departure_Time__c - (1/12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckIn Window End</label>
    <type>DateTime</type>
</CustomField>