src-org/main/default/objects/Flight__c/fields/CheckIn_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Window_Start__c</fullName>
    <formula>Departure_Time__c - 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckIn Window Start</label>
    <type>DateTime</type>
</CustomField>