src-org/main/default/objects/Flight__c/fields/Destination_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport_Code__c</fullName>
    <label>Destination Airport Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>