src-org/main/default/objects/Flight__c/fields/Economy_Price__c.field-meta.xml
<CustomField>
    <fullName>Economy_Price__c</fullName>
    <label>Economy Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>