src-org/main/default/objects/Flight__c/fields/Origin_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport_Code__c</fullName>
    <label>Origin Airport Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>