src-org/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Departure_Time__c</columns>
    <columns>Arrival_Time__c</columns>
    <columns>Origin__c</columns>
    <columns>Destination__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>